# text_clasifier_scikit_learn

./: pyproject.toml  readme.md  text_classifier.ipynb
