[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Alex Peña <attn.alex.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.2.0"
scikit-learn = "^0.24.0"
Keras = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
